Removed node on startup stuck in STARTUP2 after being re-added into the replica set

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.8, v4.7, v4.4, v4.2, v4.0, v3.6
    • Repl 2020-11-30
    • 50
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-33747 introduced a change to not start data replication on startup if the node is REMOVED.

      However, in our power cycle tests, we do the following:
      1. Start a single node replica set on port 20000
      2. Restart the node on port 20001
      3. Node is unable to find itself in the config on startup, enters REMOVED

      4. A reconfig is performed to update the hostname in the rsConfig.
      5. Node finds itself in the config, transitions to STARTUP2, and has no means to get out.

            Assignee:
            A. Jesse Jiryu Davis
            Reporter:
            Jason Chan
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: