SERVER-52680 Start replication when leaving REMOVED state

(cherry picked from commit 73ab98a9094de18b82e596e8d1d0bf311858548b)